fixed border radius on mobile

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -761,6 +761,7 @@ body{
 			padding-left: 20px;
 			padding-right: 20px;
 			border: none;
+			border-radius: 0;
 			box-sizing: border-box;
 			background: rgba(250,250,250,0.9);
 			transition: background .1s ease-in-out;
@@ -883,6 +884,7 @@ body{
 		font-weight: 300;
 		@include mq(phone){
 			font-size: 1.8em;
+			margin-top: 20px;
 		}
 	}
 
@@ -894,6 +896,7 @@ body{
 
 		@include mq(phone){
 			max-width: 90%;
+			margin-bottom: 20px;
 		}
 	}
 
